@startuml

left to right direction

class User {
  -String name
  -String email
  -String address
  -String phone
  +User(String, String, String, String)
  +String getName()
  +void setName(String)
  +String getEmail()
  +void setEmail(String)
  +String getAddress()
  +void setAddress(String)
  +String getPhone()
  +void setPhone(String)
}

class UserModel {
  -List<User> users
  +UserModel()
  +List<User> getUsers()
  +void setUsers(List<User>)
  +void addUser(User)
  +void updateUser(User)
}

class UserView {
  +void printUserDetails(List<User>)
}

class UserController {
  -UserModel model
  -UserView view
  +UserController(UserModel, UserView)
  +void viewUsers()
  +void updateUser(User)
}

class MVCPatternDemo {
  +static void main(String[])
}

User "1" -- "1" UserModel : <<uses>>
UserModel "1" -- "1" UserController : <<uses>>
UserView "1" -- "1" UserController : <<uses>>
UserController "1" -- "1" MVCPatternDemo : <<uses>>
@enduml